--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-Flask==1.1.1
-requests==2.20.0
-WTForms==2.2.1
-Flask_Mail==0.9.1
+Flask>=1.1.1
+requests>=2.18.4
+Flask_Mail>=0.9.1
+WTForms>=2.2.1
